Fixed window bug. Added z-index conditional logic.

--- a/src/components/windows/Window.scss
+++ b/src/components/windows/Window.scss
@@ -1,5 +1,5 @@
 .window {
-  position: absolute;
+  position: absolute !important;
   overflow: hidden;
   width: 75vw;
 
